chore: clean loccitane references

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -1,89 +1,14 @@
 @import "tailwindcss";
 
-@font-face {
-  font-family: "LOccitaneSans";
-  src: url("/fonts/LOccitaneSans-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "LOccitaneSans";
-  src: url("/fonts/LOccitaneSans-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "LOccitaneSans";
-  src: url("/fonts/LOccitaneSans-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "LOccitaneSans";
-  src: url("/fonts/LOccitaneSans-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "LOccitaneSans";
-  src: url("/fonts/LOccitaneSans-Italic.ttf") format("truetype");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "LOccitaneSans";
-  src: url("/fonts/LOccitaneSans-BoldItalic.ttf") format("truetype");
-  font-weight: 700;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "LOccitaneSerif";
-  src: url("/fonts/LOccitaneSerif-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "LOccitaneSerif";
-  src: url("/fonts/LOccitaneSerif-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "LOccitaneSerif";
-  src: url("/fonts/LOccitaneSerif-Italic.ttf") format("truetype");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "LOccitaneSerif";
-  src: url("/fonts/LOccitaneSerif-BoldItalic.ttf") format("truetype");
-  font-weight: 700;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "LOccitaneSerifCondensed";
-  src: url("/fonts/LOccitaneSerifCondensed-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-
 @theme {
   --color-primary: #ffc700;
   --color-secondary: #3f2b2e;
   --color-tertiary: #9c774d;
   --color-milk-white: #f2e9da;
-  --font-family-sans: "LOccitaneSans", sans-serif;
-  --font-family-serif: "LOccitaneSerif", serif;
+  --font-family-sans:
+    system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+    sans-serif;
+  --font-family-serif: Georgia, "Times New Roman", Times, serif;
 }
 
 body {
